# rust_advance_tutorials

./: Cargo.toml
benches/: Cargo.toml
src/: main.rs
src/notes/: 01-lifetime_base.rs  01-lifetime_box.rs  01-lifetime_closure_elision.rs  01-lifetime_mixed.rs  01-lifetime_static.rs  01-lifetime_t_static.rs  02-closure-box.rs  02-closure-cacher.rs  02-closure-fn-all.rs  02-closure-once.rs  02-clustor-intensity.rs  02-clustor.rs  03-iterator-01.rs  03-iterator-cosumer.rs  04-typechange-as.rs
